<resources>
    <string name="app_name">iReport</string>
    <string name="feed_button">Feed</string>
    <string name="create_button">Create</string>
    <string name="profile_button">Profile</string>

    <string name="facebook_app_id">1048768205205984</string>

    <!-- Content descriptions-->
    <string name="feed_button_desc">Button that shows main fragment</string>
    <string name="create_button_desc">Button that shows create fragment</string>
    <string name="profile_button_desc">Button that shows profile fragment</string>
    <string name="main_fragment_holder">Holder for feed, create and profile fragments</string>
    <string name="report_item_thumbnail">Thumbnail image of the report item</string>
    <string name="report_item_title">Title of the report item</string>
    <string name="report_item_author">Author of the report item</string>
    <string name="camera_textureview">Texture view to load camera preview</string>
    <string name="capture_button">Button used for image capturing</string>
    <string name="captured_image">ImageView to show captured image</string>
    <string name="report_edittext">Edit text to type the report</string>
    <string name="publish_button">Button used to initiate the uploading service</string>
    <string name="publisher_name">Textview to show the name of the publisher</string>
    <string name="report_tittle">Textview to show the title of the report</string>
    <string name="fb_login_button">LoginButton for facebook login</string>
    <string name="user_profile_pic">User profile picture</string>
    <string name="user_name">User full name</string>
</resources>
