<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tahirietrit.ireport.MainActivity">
    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonPanel"
        android:contentDescription="@string/main_fragment_holder"/>
    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/feed_button"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="fill_parent"
            android:text="@string/feed_button"
            android:textColor="@color/tab_text_color"
            android:background="@android:color/white"
            android:contentDescription="@string/feed_button_desc"/>
        <Button
            android:id="@+id/create_button"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="fill_parent"
            android:text="@string/create_button"
            android:textColor="@color/tab_text_color"
            android:background="@android:color/white"
            android:contentDescription="@string/create_button_desc"/>
        <Button
            android:id="@+id/profile_button"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="fill_parent"
            android:text="@string/profile_button"
            android:textColor="@color/tab_text_color"
            android:background="@android:color/white"
            android:contentDescription="@string/profile_button_desc"/>
    </LinearLayout>
</RelativeLayout>
