<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/report_image"
        android:layout_width="fill_parent"
        android:scaleType="centerCrop"
        android:layout_height="200dp"
        android:contentDescription="@string/report_item_thumbnail"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/author_profile_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/user_profile_pic"/>
        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/user_name"
            android:layout_toEndOf="@+id/author_profile_pic"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/report_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:contentDescription="@string/report_tittle"
        android:layout_marginTop="20dp"/>

</LinearLayout>