<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/report_thumb"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#000"
            android:scaleType="centerCrop"
            android:contentDescription="@string/report_item_thumbnail"/>
        <TextView
            android:id="@+id/report_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="fasdf"
            android:textColor="@android:color/white"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/publisher_name"/>

        <TextView
            android:id="@+id/report_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="21dp"
            android:text="fasdf"
            android:textColor="@android:color/white"
            android:layout_marginStart="20dp"
            android:layout_above="@+id/report_author"
            android:maxLines="1"
            android:contentDescription="@string/report_tittle"
            />

    </RelativeLayout>
</RelativeLayout>